platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_107.platter
table of person = [
        piece of age;
    chars of name;

]


start() {}